--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+WDS_SOCKET_PORT=443
+REACT_APP_BACKEND_URL=https://090f1bbb-1ae7-49b3-b27a-6fd8915a0f58.preview.emergentagent.com
