--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://656c98dd-41f8-4b25-bad6-781200940d46.preview.emergentagent.com
 WDS_SOCKET_PORT=443
